crates/toml/tests/snapshots/invalid/key/quoted-unclosed-01.stderr
TOML parse error at line 1, column 9
  |
1 | "key = x
  |         ^
key with no value, expected `=`

---
TOML parse error at line 1, column 9
  |
1 | "key = x
  |         ^
invalid basic string, expected `"`
